--- a/.github/workflows/generate-fonts.yml
+++ b/.github/workflows/generate-fonts.yml
@@ -279,13 +279,13 @@ jobs:
           pattern: patched Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-${{ matrix.hints }} font
           merge-multiple: true
       - name: generating ttc from ttf
-        run: python otf2otc.py -o Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont.ttc Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
+        run: python otf2otc.py -o Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont-${{ matrix.hints}}.ttc Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
 
       - run: ls -l
       - name: compress patched font files
         run: |
           7z a Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-${{ matrix.hints }}-NerdFont.7z Sarasa${{ matrix.styles }}${{ matrix.orthographies }}-*-NerdFont.ttf
-          7z a Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont.ttc.7z Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont.ttc
+          7z a Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont-${{ matrix.hints }}.ttc.7z Sarasa${{ matrix.styles }}${{ matrix.orthographies }}NerdFont-${{ matrix.hints }}.ttc
 
       - run: ls -l
       - name: upload compressed font files
@@ -299,8 +299,6 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
     steps:
-      - run: ls -l
-
       - uses: actions/download-artifact@v4
         with:
           pattern: Sarasa*-NerdFont.7z
